--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/vinbustamante/pokemonquery#readme",
   "dependencies": {
     "async": "^3.1.0",
+    "class-transformer": "^0.2.3",
     "inversify": "^5.0.1",
     "moment-timezone": "^0.5.26",
     "object-path": "^0.11.4",
