--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon",
+    "build": "npm run clear && npm run compile && npm run makedir",
+    "makedir": "mkdirp dist/data/id && mkdirp dist/data/name",
+    "compile": "tsc -p tsconfig.build.json",
+    "clear": "rimraf dist",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json -c tslint.json -e \"dist/**/*.js\" -e \"coverage/**/*.js\" -e \"test/**\"",
     "test": "nyc -r lcov -e .ts -x \"test/**/*.spec.ts\" jasmine-ts --config=jasmine.json && nyc report"
   },
   "repository": {
@@ -26,6 +32,7 @@
     "object-path": "^0.11.4",
     "os": "^0.1.1",
     "request": "^2.88.0",
+    "shelljs": "^0.8.3",
     "sinon": "^7.3.2",
     "underscore": "^1.9.1",
     "yargs": "^13.3.0"
@@ -39,11 +46,15 @@
     "expect": "^24.8.0",
     "jasmine": "^3.4.0",
     "jasmine-ts": "^0.3.0",
+    "mkdirp": "^0.5.1",
     "nodemon": "^1.19.1",
+    "nyc": "^13.3.0",
+    "prettier": "^1.18.2",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^2.6.3",
     "ts-node": "^8.3.0",
     "tsconfig-paths": "^3.8.0",
-    "typescript": "^3.5.3",
-    "nyc": "^13.3.0"
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3"
   }
 }
